--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,14 @@
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
-			"extensions": ["biomejs.biome", "vitest.explorer", "bradlc.vscode-tailwindcss"]
+			"extensions": ["biomejs.biome", "vitest.explorer", "bradlc.vscode-tailwindcss"],
+			"settings": {
+				"editor.defaultFormatter": "biomejs.biome",
+				"editor.formatOnSave": true,
+				"editor.codeActionsOnSave": {
+					"source.fixAll.biome": "explicit"
+				}
+			}
 		}
 	}
 
